# bookstore-fastapi

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: database.py  db.py  main.py  models.py
