[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "Fast API Project"
authors = ["Pijus Kumar Sarker <pijus.sarker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
gunicorn = "^20.1.0"
sqlalchemy = "^2.0.19"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
pylint = "^2.17.4"
pytest = "^7.4.0"
pylint-runner = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
